# jackknife

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  jackknife.toml  pyproject.toml
.augment/: guidelines.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: publish.yml  test.yml
jackknife/: __init__.py  cli.py
jackknife/blades/: __init__.py
jackknife/blades/agents/: __init__.py  base.py  factory.py  models.py  orchestrator.py  status.py  task_graph.py  worker.py
jackknife/blades/data/: __init__.py  base.py  factory.py  models.py
jackknife/blades/data/flat/: reader.py
jackknife/blades/data/graph/: neo4j.py
jackknife/blades/data/nosql/: mongo.py  redis_connector.py
jackknife/blades/data/sql/: connector.py
jackknife/blades/llm/: __init__.py  base.py  factory.py  litellm_provider.py  models.py  retry.py
jackknife/blades/mcp/: __init__.py  base.py  client.py  factory.py  models.py  registry.py
jackknife/blades/memory/: __init__.py  base.py  chroma_store.py  context_files.py  factory.py  mcp_server.py  models.py  retriever.py  write_queue.py
jackknife/blades/storage/: __init__.py  azure.py  base.py  factory.py  gcs.py  local.py  models.py  s3.py
jackknife/core/: __init__.py  config.py  exceptions.py  logging.py  models.py
jackknife/scaffold/: __init__.py  commands.py  engine.py  validators.py
templates/api/: CLAUDE.md.j2  main.py.j2  pyproject.toml.j2
templates/streamlit/: CLAUDE.md.j2  main.py.j2  pyproject.toml.j2
tests/: conftest.py  test_cli.py  test_factories.py  test_scaffold.py
tests/blades/test_agents/: test_base.py  test_orchestrator.py  test_status.py  test_task_graph.py  test_worker.py
tests/blades/test_data/: test_base.py  test_factory.py  test_flat_reader.py  test_sql.py
tests/blades/test_llm/: test_base.py  test_retry.py
tests/blades/test_mcp/: test_base.py  test_client.py  test_registry.py
tests/blades/test_memory/: test_base.py  test_chroma_store.py  test_retriever.py  test_write_queue.py
tests/blades/test_storage/: test_base.py  test_factory.py  test_local.py
tests/test_core/: test_config.py  test_exceptions.py  test_logging.py  test_models.py
